--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@vitejs/plugin-react": "^4.4.1",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.25.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
